--- a/src/components/resume.scss
+++ b/src/components/resume.scss
@@ -1,16 +1,18 @@
 * {
 	font-family: TT Commons,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
   }
+
+  
   
   p {
 	text-align: justify;
     text-justify: inter-word;
   }
 
-	ul > li > p {
-		margin: 0 auto;
-		font-size: 13px;
-	}
+ul > li > p {
+	margin: 0 auto;
+	font-size: 12px;
+}
 
   .w50 {
   	width: 50%;
@@ -29,6 +31,9 @@
 	.row {
 		width: 100%;
 	}
+	.about p {
+		font-size: 12px;
+	}
 }
 	
 @media screen{
@@ -37,11 +42,12 @@
 	}
 	.letter-sheet{
 		width: 8.5in;
-		height: 11.0in;
+		//height: 11.0in;
 		padding: 0.6in;
 		border: solid 1px black;
 		margin: 0.5in auto;
 		background-color: white;
+		box-shadow: rgba(0, 0, 0, 0.8) 0px 7px 29px 0px;
 	}
 }
 	
@@ -80,6 +86,7 @@
 		float: left;
 		width: 30%;
 		display: inline-block;
+		line-height: 30px;
 		//margin-top: 0.3in;
 	}
 	
@@ -199,8 +206,8 @@
   .contact-section{
 	float: right;
     font-size: 13px;
-    width: 32%;
-	margin-top: 0.4in;
+    width: 42%;
+	//margin-top: 0.4in;
 	list-style-type: none;
   }
   
